@@ -1,5 +1,8 @@
 ViTables ChangeLog
 ==================
+** September 30, 2013 **
+The modules vtSite and vtGUI hav been renamed accordingly to PEP 8.
+
 ** September 29, 2013 **
 The module dataSheet has been renamed accordingly to PEP 8.
 
